@@ -24,6 +24,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-10583 (DateTime modify with tz pattern should not update
     linked timezone). (Derick)
 
+- DOM:
+  . Fixed bug #80602 (Segfault when using DOMChildNode::before()).
+    (Nathan Freeman)
+
 - FPM:
   . Fixed bug GH-10611 (fpm_env_init_main leaks environ). (nielsdos)
   . Destroy file_handle in fpm_main. (Jakub Zelenka, nielsdos)
